# protor

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
protor/: analyzer.py  cli.py  crawler.py  crawler_methods.py  rag_analyzer.py  scraper.py  utils.py
tests/: README.md  __init__.py  conftest.py  test_analyzer.py  test_integration.py  test_scraper.py  test_utils.py
